--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1638,7 +1638,7 @@ A powerful geometric technique to define face-coherent cellular diagonals on pol
 The key idea is that any vector $\b{v}$ in generic position with respect to $P$ defines a cellular diagonal of $P$.
 We denote by~$\min_{\b{v}}(P)$ (resp.~$\max_{\b{v}}(P)$) the unique vertex of~$P$ which minimizes (resp.~maximizes) the scalar product with~$\b{v}$. 
 
-\begin{definition}
+\begin{proposition}
 \label{prop:diagonal}
 For any vector $\b{v}$ in generic position with respect to $P$, the tight coherent section~$\triangle_{(P,\b{v})}$ of the projection $P \times P \to P, (\b{x}, \b{y}) \mapsto (\b{x}+\b{y})/2$ selected by the vector~$(-\b{v}, \b{v})$ defines a cellular diagonal of~$P$.
 More precisely, $\triangle_{(P,\b{v})}$ is given by the explicit formula
@@ -1649,7 +1649,7 @@ More precisely, $\triangle_{(P,\b{v})}$ is given by the explicit formula
 \end{array}
 \end{align*}
 where $\rho_{\b{z}} P \eqdef 2\b{z}-P$ denotes the reflection of $P$ with respect to the point~$\b{z}$. 
-\end{definition}
+\end{proposition}
 
 \begin{figure}[p]
 	\centerline{\scalebox{1.25}{
